kube/base/w16/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: w16
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - args:
            - -otlp.endpoint=otelcol.otelcol.svc.cluster.local:4317
          name: w16
          image: docker.seankhliao.com/w16:latest
          ports:
            - name: http
              containerPort: 8080
      enableServiceLinks: false
      serviceAccountName: w16
      terminationGracePeriodSeconds: 10
