kube/base/w16/ingressroute.k8s.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: w16
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`w16.seankhliao.com`)
    kind: Rule
    services:
    - name: w16
      port: 80
  tls:
    certResolver: default
